# Elemancer

./: .gitignore  CMakeLists.txt  README.md  package.sh
.github/workflows/: release.yml
shaders/: background.frag  blur.frag  common_env.glsl  composite.frag  depth.frag  fullscreen.vert  impostor.vert  particle.frag  particle.vert  spray.frag  spray.vert  temporal.frag  thickness.frag
src/: main.cpp
src/render/: FluidRenderer.cpp  FluidRenderer.h  Hud.cpp  Hud.h
src/sim/: Fluid.cpp  Fluid.h
src/update/: Updater.cpp  Updater.h
tests/: test_sim.cpp
